-created the FounderViewCompoents set of files -added the founders table data to the initializer

--- a/MyYouthFutures/MyYouthFutures.csproj
+++ b/MyYouthFutures/MyYouthFutures.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Shared\Components\intro\" />
+    <Folder Include="Views\Shared\Components\Founder\" />
   </ItemGroup>
 
 </Project>
