--- a/MyYouthFutures/bower.json
+++ b/MyYouthFutures/bower.json
@@ -7,6 +7,7 @@
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
     "angular-content-editable": "v1.2.1",
-    "angular": "v1.6.7-build.5496+sha.181ac0b"
+    "angular": "v1.6.7-build.5496+sha.181ac0b",
+    "angular-aside": "1.4.0"
   }
 }
