--- a/MyYouthFutures/appsettings.json
+++ b/MyYouthFutures/appsettings.json
@@ -2,10 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YouthFutures;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
+  },
+  "ApplicationSettings": {
+    "TestSetting": "TestValue",
+    "Username": "intstrings",
+    "Password": "SendGridPassword"
   }
 }
