Fixed the login screen

--- a/MyYouthFutures/MyYouthFutures.csproj
+++ b/MyYouthFutures/MyYouthFutures.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="..\..\..\..\CS %2528scotthadzik%2540weber.edu%2529\CS 3750\YF\MyYouthFutures\Views\ViewModel\Services_Message\Create.cshtml" />
+    <Content Include="..\..\..\..\CS %2528scotthadzik%2540weber.edu%2529\CS 3750\YF\MyYouthFutures\Views\ViewModel\Services_Message\Delete.cshtml" />
+    <Content Include="..\..\..\..\CS %2528scotthadzik%2540weber.edu%2529\CS 3750\YF\MyYouthFutures\Views\ViewModel\Services_Message\Details.cshtml" />
+    <Content Include="..\..\..\..\CS %2528scotthadzik%2540weber.edu%2529\CS 3750\YF\MyYouthFutures\Views\ViewModel\Services_Message\Edit.cshtml" />
+    <Content Include="..\..\..\..\CS %2528scotthadzik%2540weber.edu%2529\CS 3750\YF\MyYouthFutures\Views\ViewModel\Services_Message\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
@@ -13,6 +21,10 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
     <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\ViewModel\" />
   </ItemGroup>
 
 </Project>
