--- a/MyYouthFutures/appsettings.json
+++ b/MyYouthFutures/appsettings.json
@@ -1,4 +1,21 @@
 ﻿{
+  "version": "1.0.0-*",
+  "buildOptions": {
+    "emitEntryPoint": true
+  },
+  "dependencies": {
+    "Microsoft.NETCore.App": {
+      "type": "platform",
+      "version": "1.0.1"
+    },
+    "SendGrid.NetCore": "1.0.0-rc2-00004"
+  },
+  "frameworks": {
+    "netcoreapp1.0": {
+      "imports": [ "dnxcore50", "portable-net45+win8" ]
+    }
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YouthFutures;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
